src/scss/components/_offer-page.scss
.offer {
  padding-top: 18vh;
  padding-bottom: 1.75em;
}

.offer-content-container {
  padding: 0 2em 1.75em 2em;
}

.offer__title {
  @include section__title;
  align-items: flex-start;
}

.offer__price {
  color: $gold;
  font-weight: 700;
  font-size: 2.6rem;
  margin-bottom: 0.5em;
}

.offer__img {
  width: 100%;
  object-fit: cover;
  min-height: 300px;
  margin-bottom: 2em;
}

.offer__content {
  font-size: 1.8rem;
}

.pros-and-cons {
  @include section;
  font-size: 1rem;
  background-color: $pink;
  padding: 0 2em 3.5em 2em;
}

.pros-and-cons__title {
  @include section__title;
  padding: 1.4em 0 0.75em 0;
  margin: 0;
  align-items: flex-start;

  &::after {
    background-color: $white;
  }
}

.pros-and-cons__paragraph {
  font-size: 1.8rem;
  margin: 0.25em;
  font-weight: 700;
}

